dodan menu iz kojeg se ide u login/register

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PrvaPomoc</string>
+
+    <string name="action_settings">Settings</string>
+
+    <string name="Log_Reg">Login/Register</string>
+
 </resources>
